--- a/book/book.bib
+++ b/book/book.bib
@@ -1,10 +1,37 @@
-@Book{xie2015,
-  title = {Dynamic Documents with {R} and knitr},
-  author = {Yihui Xie},
-  publisher = {Chapman and Hall/CRC},
-  address = {Boca Raton, Florida},
-  year = {2015},
-  edition = {2nd},
-  note = {ISBN 978-1498716963},
-  url = {http://yihui.org/knitr/},
+
+
+@report{borel_modeling_2012,
+	location = {College Station, {TX}},
+	title = {Modeling Support for the Attoyac Bayou Assessment Using Load Duration Curves},
+	url = {https://twri.tamu.edu/publications/technical-reports/2012-technical-reports/tr-453/},
+	number = {453},
+	institution = {Texas Water Resources Institute},
+	type = {Technical Report},
+	author = {Borel, Kyna and Gregory, Lucas and Karthikeyan, R.},
+	date = {2012}
+}
+
+
+@article{byers_phosphorus_2005,
+	title = {Phosphorus, sediment, and loads in unfenced streams of the {Georgia} {Piedmont}, {USA}},
+	volume = {34},
+	doi = {10.2134/jeq2004.0335},
+	pages = {2293},
+	number = {6},
+	journaltitle = {Journal of Environment Quality},
+	author = {Byers, H. L. and Cabrera, M. L. and Matthews, M. K. and Franklin, D. H. and Andrae, J. G. and Radcliffe, D. E. and {McCann}, M. A. and Kuykendall, H. A. and Hoveland, C. S. and Calvert, V. H.},
+	date = {2005},
+	langid = {english}
+}
+
+@article{k._l._wagner_assessment_2012,
+	title = {Assessment of cattle grazing effects on E. coli runoff},
+	volume = {55},
+	doi = {10.13031/2013.42503},
+	pages = {2111--2122},
+	number = {6},
+	journaltitle = {Transactions of the {ASABE}},
+	author = {{K. L. Wagner} and {L. A. Redmon} and {T. J. Gentry} and {R. D. Harmel}},
+	date = {2012},
+	langid = {english}
 }
