--- a/book/book.bib
+++ b/book/book.bib
@@ -25,13 +25,13 @@
 }
 
 @article{k._l._wagner_assessment_2012,
-	title = {Assessment of cattle grazing effects on E. coli runoff},
+	title = {Assessment of cattle grazing effects on \textit{E. coli} runoff},
 	volume = {55},
 	doi = {10.13031/2013.42503},
 	pages = {2111--2122},
 	number = {6},
 	journaltitle = {Transactions of the {ASABE}},
-	author = {{K. L. Wagner} and {L. A. Redmon} and {T. J. Gentry} and {R. D. Harmel}},
+	author = {Wagner, K. L. and Redmon, L. A. and Gentry T. J. and Harme, R. D},
 	date = {2012},
 	langid = {english}
 }
