--- a/book/book.bib
+++ b/book/book.bib
@@ -25,7 +25,7 @@
 }
 
 @article{k._l._wagner_assessment_2012,
-	title = {Assessment of cattle grazing effects on \textit{E. coli} runoff},
+	title = {Assessment of cattle grazing effects on \textit{{E}. {coli}} runoff},
 	volume = {55},
 	doi = {10.13031/2013.42503},
 	pages = {2111--2122},
