--- a/book/book.bib
+++ b/book/book.bib
@@ -31,7 +31,17 @@
 	pages = {2111--2122},
 	number = {6},
 	journaltitle = {Transactions of the {ASABE}},
-	author = {Wagner, K. L. and Redmon, L. A. and Gentry T. J. and Harme, R. D},
+	author = {Wagner, K. L. and Redmon, L. A. and Gentry T. J. and Harmel, R. D},
 	date = {2012},
 	langid = {english}
+}
+
+
+
+@article{schlanger_out_2018,
+	title = {Out of Sight, out of water: The U.S. and Mexico have only just begun to grapple with the aquifers they share},
+	url = {https://www.texasobserver.org/out-of-sight-out-of-water-the-u-s-and-mexico-have-only-just-begun-to-grapple-with-the-aquifers-they-share/},
+	journaltitle = {Texas Observer},
+	author = {Schlanger, Zoe},
+	date = {2018-08-20}
 }
